@startuml
left to right direction
package "View Layer" {
  class MainActivity
  class TaskListFragment
  class AddTaskFragment
}

package "ViewModel Layer" {
  class TaskViewModel
}

package "Model Layer" {
  class Task
  class TaskFilter
}

package "Data Layer" {
  class TaskRepository <<interface>>
  class TaskRepositoryImpl
  class TaskDao
  class AppDatabase
}

MainActivity --> TaskViewModel
TaskListFragment --> TaskViewModel
AddTaskFragment --> TaskViewModel
TaskViewModel --> TaskRepository
TaskViewModel --> TaskFilter
TaskRepositoryImpl --> TaskDao
TaskDao --> Task
TaskDao --> AppDatabase
TaskRepositoryImpl ..|> TaskRepository

@enduml
